MilenguajeParser.java
// Generated from Milenguaje.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MilenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T_BOOLEANO=7, T_ENTERO=8, 
		T_FLOTANTE=9, T_CADENA=10, RETORNAR=11, BOOLEANO=12, FLOTANTE=13, ENTERO=14, 
		CADENA=15, SI=16, SINO=17, PARA=18, MIENTRAS=19, IDENTIFICADOR=20, MAS=21, 
		MENOS=22, POTENCIADO=23, MULTIPLICADO=24, DIVIDIDO=25, MODULO=26, IGUAL=27, 
		DIFERENTE=28, MENORQUE=29, MENORIGUAL=30, MAYORQUE=31, MAYORIGUAL=32, 
		LOGAND=33, LOGOR=34, LOGNOT=35, ASIGN=36, BITAND=37, BITOR=38, BITNOT=39, 
		BITXOR=40, BITLSHIFT=41, BITRSHIFT=42, WS=43;
	public static final int
		RULE_codigo = 0, RULE_instruccion = 1, RULE_declrVar = 2, RULE_asigVar = 3, 
		RULE_parametros = 4, RULE_parametro = 5, RULE_instrIf = 6, RULE_instrFor = 7, 
		RULE_instrWhile = 8, RULE_instrReturn = 9, RULE_declrFun = 10, RULE_llamarFun = 11, 
		RULE_expresion = 12, RULE_exprLogico = 13, RULE_exprAnd = 14, RULE_exprIgualdad = 15, 
		RULE_exprRel = 16, RULE_exprSuma = 17, RULE_exprMult = 18, RULE_exprPot = 19, 
		RULE_exprUn = 20, RULE_exprResto = 21, RULE_tipo = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"codigo", "instruccion", "declrVar", "asigVar", "parametros", "parametro", 
			"instrIf", "instrFor", "instrWhile", "instrReturn", "declrFun", "llamarFun", 
			"expresion", "exprLogico", "exprAnd", "exprIgualdad", "exprRel", "exprSuma", 
			"exprMult", "exprPot", "exprUn", "exprResto", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'('", "')'", "'{'", "'}'", "'booleano'", "'entero'", 
			"'flotante'", "'cadena'", "'retornar'", null, null, null, null, "'si'", 
			"'sino'", "'para'", "'mientras'", null, "'+'", "'-'", "'**'", "'*'", 
			"'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
			"'!'", "'='", "'&'", "'|'", "'~'", "'^'", "'<<'", "'>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "T_BOOLEANO", "T_ENTERO", "T_FLOTANTE", 
			"T_CADENA", "RETORNAR", "BOOLEANO", "FLOTANTE", "ENTERO", "CADENA", "SI", 
			"SINO", "PARA", "MIENTRAS", "IDENTIFICADOR", "MAS", "MENOS", "POTENCIADO", 
			"MULTIPLICADO", "DIVIDIDO", "MODULO", "IGUAL", "DIFERENTE", "MENORQUE", 
			"MENORIGUAL", "MAYORQUE", "MAYORIGUAL", "LOGAND", "LOGOR", "LOGNOT", 
			"ASIGN", "BITAND", "BITOR", "BITNOT", "BITXOR", "BITLSHIFT", "BITRSHIFT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Milenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MilenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodigoContext extends ParserRuleContext {
		public List<DeclrFunContext> declrFun() {
			return getRuleContexts(DeclrFunContext.class);
		}
		public DeclrFunContext declrFun(int i) {
			return getRuleContext(DeclrFunContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_codigo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(48);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(46);
					declrFun();
					}
					break;
				case 2:
					{
					setState(47);
					instruccion();
					}
					break;
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public DeclrVarContext declrVar() {
			return getRuleContext(DeclrVarContext.class,0);
		}
		public AsigVarContext asigVar() {
			return getRuleContext(AsigVarContext.class,0);
		}
		public LlamarFunContext llamarFun() {
			return getRuleContext(LlamarFunContext.class,0);
		}
		public InstrIfContext instrIf() {
			return getRuleContext(InstrIfContext.class,0);
		}
		public InstrForContext instrFor() {
			return getRuleContext(InstrForContext.class,0);
		}
		public InstrWhileContext instrWhile() {
			return getRuleContext(InstrWhileContext.class,0);
		}
		public InstrReturnContext instrReturn() {
			return getRuleContext(InstrReturnContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccion);
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declrVar();
				setState(53);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				asigVar();
				setState(56);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				llamarFun();
				setState(59);
				match(T__0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				instrIf();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				instrFor();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(63);
				instrWhile();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(64);
				instrReturn();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclrVarContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MilenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode ASIGN() { return getToken(MilenguajeParser.ASIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclrVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declrVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitDeclrVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclrVarContext declrVar() throws RecognitionException {
		DeclrVarContext _localctx = new DeclrVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declrVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			tipo();
			setState(68);
			match(IDENTIFICADOR);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASIGN) {
				{
				setState(69);
				match(ASIGN);
				setState(70);
				expresion();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsigVarContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(MilenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode ASIGN() { return getToken(MilenguajeParser.ASIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public AsigVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asigVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitAsigVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsigVarContext asigVar() throws RecognitionException {
		AsigVarContext _localctx = new AsigVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asigVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(IDENTIFICADOR);
			setState(74);
			match(ASIGN);
			setState(75);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			parametro();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(78);
				match(T__1);
				setState(79);
				parametro();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MilenguajeParser.IDENTIFICADOR, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitParametro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			tipo();
			setState(86);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrIfContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(MilenguajeParser.SI, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public TerminalNode SINO() { return getToken(MilenguajeParser.SINO, 0); }
		public InstrIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitInstrIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrIfContext instrIf() throws RecognitionException {
		InstrIfContext _localctx = new InstrIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instrIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(SI);
			setState(89);
			match(T__2);
			setState(90);
			expresion();
			setState(91);
			match(T__3);
			setState(92);
			match(T__4);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0)) {
				{
				{
				setState(93);
				instruccion();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__5);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(100);
				match(SINO);
				setState(101);
				match(T__4);
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(102);
					instruccion();
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0) );
				setState(107);
				match(T__5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrForContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(MilenguajeParser.PARA, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclrVarContext declrVar() {
			return getRuleContext(DeclrVarContext.class,0);
		}
		public List<AsigVarContext> asigVar() {
			return getRuleContexts(AsigVarContext.class);
		}
		public AsigVarContext asigVar(int i) {
			return getRuleContext(AsigVarContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstrForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrFor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitInstrFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrForContext instrFor() throws RecognitionException {
		InstrForContext _localctx = new InstrForContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instrFor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(PARA);
			setState(112);
			match(T__2);
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_BOOLEANO:
			case T_ENTERO:
			case T_FLOTANTE:
			case T_CADENA:
				{
				setState(113);
				declrVar();
				}
				break;
			case IDENTIFICADOR:
				{
				setState(114);
				asigVar();
				}
				break;
			case T__0:
				break;
			default:
				break;
			}
			setState(117);
			match(T__0);
			setState(118);
			expresion();
			setState(119);
			match(T__0);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFICADOR) {
				{
				setState(120);
				asigVar();
				}
			}

			setState(123);
			match(T__3);
			setState(124);
			match(T__4);
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				instruccion();
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0) );
			setState(130);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrWhileContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(MilenguajeParser.MIENTRAS, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstrWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrWhile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitInstrWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrWhileContext instrWhile() throws RecognitionException {
		InstrWhileContext _localctx = new InstrWhileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instrWhile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(MIENTRAS);
			setState(133);
			match(T__2);
			setState(134);
			expresion();
			setState(135);
			match(T__3);
			setState(136);
			match(T__4);
			setState(138); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137);
				instruccion();
				}
				}
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0) );
			setState(142);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrReturnContext extends ParserRuleContext {
		public TerminalNode RETORNAR() { return getToken(MilenguajeParser.RETORNAR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public InstrReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrReturn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitInstrReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrReturnContext instrReturn() throws RecognitionException {
		InstrReturnContext _localctx = new InstrReturnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instrReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(RETORNAR);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34365042696L) != 0)) {
				{
				setState(145);
				expresion();
				}
			}

			setState(148);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclrFunContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(MilenguajeParser.IDENTIFICADOR, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public DeclrFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declrFun; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitDeclrFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclrFunContext declrFun() throws RecognitionException {
		DeclrFunContext _localctx = new DeclrFunContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declrFun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			tipo();
			setState(151);
			match(IDENTIFICADOR);
			setState(152);
			match(T__2);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1920L) != 0)) {
				{
				setState(153);
				parametros();
				}
			}

			setState(156);
			match(T__3);
			setState(157);
			match(T__4);
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158);
				instruccion();
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1904512L) != 0) );
			setState(163);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LlamarFunContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(MilenguajeParser.IDENTIFICADOR, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public LlamarFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamarFun; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MilenguajeVisitor ) return ((MilenguajeVisitor<? extends T>)visitor).visitLlamarFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamarFunContext llamarFun() throws RecognitionException {
		LlamarFunContext _localctx = new LlamarFunContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_llamarFun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(IDENTIFICADOR);
			setState(166);
			match(T__2);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34365042696L) != 0)) {
				{
				setState(167);
				expresion();
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(168);
					match(T__1);
					setState(169);
					expresion();
					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(177);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
